<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/blue1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--页头-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:gravity="center"
        android:background="@color/blue3">

        <Button
            android:id="@+id/btnreturn"
            android:layout_width="@dimen/dp60"
            android:layout_height="@dimen/dp30"
            android:textSize="20sp"
            android:textColor="@color/blue1"
            android:text="@string/返回"
            android:background="@color/blue3"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvnews"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/设置"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"/>
        <View
            android:layout_width="@dimen/dp60"
            android:layout_height="@dimen/dp40">
        </View>
    </LinearLayout>
    <ListView
        android:id="@+id/lvset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">
    </ListView>

    <Button
        android:id="@+id/btnexitapp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:text="@string/退出程序"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp15"
        android:background="@drawable/yuajiao"/>

    <ProgressBar
        android:id="@+id/ring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>

